--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body
+html
+    display flex
+    margin 0
+    padding 0
+    width 100vw
+    height 100vh
+    font-family Arial, Helvetica, sans-serif
+    font-size 16px
